[tool.poetry]
name = "polish-torch"
version = "0.1.0"
description = ""
authors = ["Liam Connor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.1"
matplotlib = "^3.8.0"
torchvision = "^0.18.1"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
